--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+.box{
+/*  	position: absolute; */
+	
+	padding: 130px 0;
+	text-align: center;
+	margin: auto;
+ 	width: 50%;
+    border: 2px solid black;
+	background-color: lightblue;
+/* 	width: 200px;
+	height: 200px; */
+	
+}
+
+/* .text{
+	text-align: center;
+	colour: purple
+	
+} */
